2025-04-15  Bart Schaefer  <schaefer@zsh.org>

	* 53454: Src/hist.c: fix interrupt handling in savehistfile()

2025-04-15  Eric Cook  <illua@users.sourceforge.net>

	* 53485: NEWS: update for version 5.10

2025-04-14  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: _typeset: fix typo

2025-04-13  dana  <dana@dana.is>

	* unposted: NEWS: update per w/53257 and w/53260

2025-04-04  Oliver Kiddle  <opk@zsh.org>

	* Kyle Andelin: 53449: Completion/Zsh/Context/_subscript:
	do not complete indices for empty array subscripts

	* 53445: Completion/Unix/Type/_path_commands: extra-verbose mode
	support on some recent Linux and BSD systems

2025-03-31  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53431: Src/params.c, Test/K01nameref.ztst: fix assignment via
	named reference to parameters in outer scopes; add tests

	* Frank Dana: 53414: Functions/Prompts/prompt_restore_setup:
	attempting to preview the "restore" keyword is nonsensical,
	use a handler function to avoid messing up terminal output

	* Frank Dana: 53413: Functions/Prompts/promptinit: "print -rP"
	in preview, in case of special characters

2025-03-03  Oliver Kiddle  <opk@zsh.org>

	* 53399: Src/Zle/zle_keymap.c, Src/builtin.c, Src/init.c,
	Src/options.c: don't load ZLE early to set keymap

	* 53394: Src/Zle/zle_keymap.c: drop OSC and DCS sequences in key
	input as they are likely to be terminal query responses not keys

2025-03-02  Bart Schaefer  <schaefer@toltec-ubuntu>

	* 53368: Src/options.c: ignore no-op changes to EMACS/VI options

2025-02-28  Oliver Kiddle  <opk@zsh.org>

	* 53395: Completion/Unix/Type/_zfs_dataset,
	Completion/Unix/Command/_zfs:
	complete snapshot ranges for zfs destroy

	* Ronan Pigott: 53393: Completion/Unix/Command/_python,
	Completion/Unix/Command/_python_module-http.server,
	Completion/Unix/Command/_python_module-json.tool,
	Completion/Unix/Command/_python_module-venv:
	Complete python module arguments

2025-02-27  Oliver Kiddle  <opk@zsh.org>
